fix(mobile): make sure to not have too wide elements

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -1,3 +1,8 @@
+* {
+    max-width: 100%;
+    overflow: auto;
+}
+
 p, *:not(div):not(img):not(body):not(html):not(li):not(blockquote):not(p) {
     max-width: 1000px;
 }
